--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.24.2",
+    "@blocknote/mantine": "^0.24.2",
+    "@blocknote/react": "^0.24.2",
     "@clerk/nextjs": "^6.12.1",
+    "@liveblocks/client": "^2.19.0",
+    "@liveblocks/node": "^2.19.0",
+    "@liveblocks/react": "^2.19.0",
+    "@liveblocks/yjs": "^2.19.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.1.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "yjs": "^13.6.23"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
